# Profiling-HPX-and-Kokkos-HPX

./: .gitignore  CMakeLists.txt  CommandLine.md  HPXtaskingOMPbackend.nsys-rep  README.md  SpawningCudaKernelsExplicit_ExecSpaceFence.nsys-rep  SpawningCudaKernels_ConcurrentStreamsSuccess.nsys-rep  SpawningCudaKernles.nsys-rep  SpawningCudaKernlesSuccess.nsys-rep  plot_histogram.py  rebuild.sh  rebuildHPX.sh  rebuildHPXvsMP.sh  results.txt  resultsHPX.txt  resultsOMP.txt  thread_counts_hpx.txt  thread_counts_openmp.txt
PythonCode/: time_comparison.py
Shell_Monitoring/: run_and_monitor.sh
gdb/: count_pthreads_create.gdb  trace_pthreads.gdb
src/: HPX.cpp  HPXandKokkosHPX_vs_KokkosOpenMP.cpp  KokkosHPXBackend.cpp
